# cookiecutter-opinionated-django

./: Procfile  cookiecutter.json  mix-manifest.json  package-lock.json  package.json  pyproject.toml
src/scss/: _custom.scss  _variables.scss  app.scss
{{ cookiecutter.project_slug }}/: .env.example  .gitignore  package-lock.json  package.json  pyproject.toml  webpack.mix.js
{{ cookiecutter.project_slug }}/templates/: home.html
{{ cookiecutter.project_slug }}/templates/account/: login.html
{{ cookiecutter.project_slug }}/users/: models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: celery.py  settings.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/users/: admin.py  forms.py  models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/users/migrations/: 0001_initial.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: asgi.py  custom_storage.py
